# fps_mapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
docs/: #how_to_calibrate_a_single_sensor_with_respect_to_the_mobile_base#  .#how_to_calibrate_a_single_sensor_with_respect_to_the_mobile_base  how_to_extrinsecally_calibrate_multiple_sensors
msg/: BinaryNodeRelationMsg.h  LocalMapMsg.h  LocalMapMsg.msg
sample_data/: transforms.txt
src/: CMakeLists.txt
src/boss/: CMakeLists.txt  blob.h  deserializer.cpp  id_placeholder.h  identifiable.cpp  identifiable.h
src/calibration/: CMakeLists.txt  calibration_measurement.cpp  calibration_measurement.h  calibration_prior.cpp  calibration_prior.h  camera_calibration_solver.cpp  camera_calibration_solver.h  extrinsic_calibrator_trigger.cpp  extrinsic_calibrator_trigger.h  fps_extrinsic_calibrator_gui_app.cpp  fps_plane_fit_app.cpp
src/core/: CMakeLists.txt  base_aligner.cpp  base_aligner.h  base_camera_info.cpp  base_camera_info.h  base_correspondence_finder.cpp  base_correspondence_finder.h  base_projector.cpp  base_projector.h  camera_info_manager.cpp  camera_info_manager.h  cloud.cpp  cloud.h  depth_utils.cpp  depth_utils.h  multi_camera_info.cpp  multi_camera_info.h  multi_projector.cpp  multi_projector.h  nn_aligner.cpp  nn_aligner.h  nn_correspondence_finder.cpp  nn_correspondence_finder.h  pinhole_camera_info.cpp  pinhole_camera_info.h  pinhole_projector.cpp  pinhole_projector.h  projective_aligner.cpp  projective_aligner.h  projective_correspondence_finder.cpp  projective_correspondence_finder.h  solver.cpp  solver.h  unscented.h
src/core_examples/: CMakeLists.txt  fps_nn_aligner_test.cpp  fps_projective_aligner_test.cpp  nn_aligner_test.cpp  projective_aligner_test.cpp
src/core_viewers/: CMakeLists.txt  cloud_viewer.cpp  cloud_viewer.h  fps_aligner_gui_app.cpp  fps_cloud_viewer_app.cpp
src/fps_ext_calib/: CMakeLists.txt  ext_calib.h  ext_calib_config.h  ext_calib_msg_trigger.h  ext_calib_trigger.h  ext_calib_viewer.cpp  ext_calib_viewer.h  fps_ext_calib_app.cpp  fps_ext_calib_app.h  fps_ext_calib_node.cpp  fps_ext_calib_node.h  fps_tracker_gui_app.cpp
src/fps_map/: CMakeLists.txt  binary_node_relation.cpp  binary_node_relation.h  fps_trajectory_loader_app.cpp  image_map_node.cpp  image_map_node.h  local_map.cpp  local_map.h  map_node.cpp  map_node.h  map_node_list.cpp  map_node_list.h  multi_image_map_node.cpp  multi_image_map_node.h
src/fps_map_viewers/: CMakeLists.txt  fps_trajectory_viewer_app.cpp  loop_closer_app_viewer.cpp  loop_closer_app_viewer.h  loop_closer_viewer.cpp  loop_closer_viewer.h  trajectory_viewer.cpp  trajectory_viewer.h
src/fps_ros_bridge/: CMakeLists.txt  cloud_publisher_trigger.cpp  cloud_publisher_trigger.h  fps_global_mapper_viewer_node.cpp  fps_local_mapper_client_node.cpp  fps_local_mapper_dumper_node.cpp  fps_local_mapper_node.cpp  fps_local_mapper_viewer_node.cpp  fps_refiner_node.cpp  fps_ros_msgs.cpp  fps_ros_msgs.h  fps_tracker_client_node.cpp  fps_tracker_node.cpp  fps_tracker_viewer_node.cpp  global_map_viewer.cpp  global_map_viewer.h  local_map_listener.cpp  local_map_listener.h  local_map_viewer.cpp  local_map_viewer.h  local_mapper_ros.cpp  local_mapper_ros.h  loop_closer_node_viewer.cpp  loop_closer_node_viewer.h  ros_utils_test.cpp
src/gl_helpers/: CMakeLists.txt  draw_attributes.h  opengl_primitives.cpp  opengl_primitives.h  simple_viewer.cpp  simple_viewer.h
src/global_optimization/: CMakeLists.txt  g2o_bridge.cpp  g2o_bridge.h
src/kinfu/: CMakeLists.txt  fps_kinfu_tracker.cpp  fps_kinfu_tracker.h  fps_kinfu_tracker_gui_app.cpp  image_view.cpp  image_view.h  kinfu_tracker_viewer.cpp  kinfu_tracker_viewer.h  scene_cloud_view.cpp  scene_cloud_view.h
src/local_mapper/: CMakeLists.txt  local_map_triggers.cpp  local_map_triggers.h
src/local_mapper_examples/: CMakeLists.txt  fps_local_mapper_gui_app.cpp
src/local_mapper_viewers/: CMakeLists.txt  local_mapper_viewer.cpp  local_mapper_viewer.h
src/loop_closer/: CMakeLists.txt  base_loop_closer.cpp  base_loop_closer.h  trajectory_matcher.cpp  trajectory_matcher.h  trajectory_matcher_correspondence_finder.cpp  trajectory_matcher_correspondence_finder.h  trajectory_matcher_loop_closer.cpp  trajectory_matcher_loop_closer.h  trajectory_matcher_solver.cpp  trajectory_matcher_solver.h
src/playground/: CMakeLists.txt  bb_viewer.cpp  bbox.h  fps_loop_closer.cpp  fps_loop_closer_app.cpp  fps_refiner.cpp  image_assembler.cpp
src/ros_utils/: CMakeLists.txt  odom_tf_publisher_node.cpp
src/ros_wrappers/: image_message_listener.cpp
src/tracker/: CMakeLists.txt  base_triggers.cpp  base_triggers.h  call_tracker_trigger.cpp  call_tracker_trigger.h  multi_tracker.cpp  multi_tracker.h  tracker.cpp  tracker.h
src/tracker_examples/: CMakeLists.txt  fps_tracker_gui_app.cpp  fps_tracker_gui_laido_app.cpp
src/tracker_viewers/: CMakeLists.txt  tracker_viewer.cpp  tracker_viewer.h
src/txt_io/: CMakeLists.txt  base_bbox_message.cpp  base_bbox_message.h  base_image_message.cpp  message_factory.h  message_seq_synchronizer.h  txt_io_dump_reader_app.cpp
